# uno_adc

./: uno_adc.ino
gravador/: CMakeLists.txt
gravador/src/: SerialPort.cpp  SerialPort.h  Wav.cpp  Wav.h  main.cpp
uno_adc/: uno_adc.ino
